--- a/src/components/account-registration/account-registration.scss
+++ b/src/components/account-registration/account-registration.scss
@@ -1,7 +1,6 @@
-@import '../input-form/input-form.scss';
-@import '../radio-buttons/radio-buttons.scss';
-@import '../toggle/toggle.scss';
-
+@import "../input-form/input-form.scss";
+@import "../radio-buttons/radio-buttons.scss";
+@import "../toggle/toggle.scss";
 
 .account-registration {
   max-width: 380px;
@@ -10,12 +9,14 @@
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 40px 30px 20px 30px;
+
   &__title {
     font-weight: bold;
     font-size: 24px;
     line-height: 29px;
     margin-bottom: 20px;
   }
+
   &__item {
     margin-bottom: 10px;
     &:nth-child(3) {
@@ -34,6 +35,7 @@
       margin-bottom: 24px;
     }
   }
+
   &__item-title {
     font-weight: bold;
     font-size: 12px;
@@ -41,6 +43,7 @@
     text-transform: uppercase;
     margin-bottom: 4px;
   }
+  
   &__footer {
     margin-top: 30px;
     display: flex;
