--- a/src/fonts/fonts.scss
+++ b/src/fonts/fonts.scss
@@ -1,36 +1,36 @@
 @font-face {
-	font-family: 'Montserrat';
-	src: url('./fonts/montserrat-regular/montserrat-regular.eot');
-    src: url('./fonts/montserrat-regular/montserrat-regular.woff') format('woff'),
-       url('./fonts/montserrat-regular/montserrat-regular.ttf') format('truetype'),
-       url('./fonts/montserrat-regular/montserrat-regular.svg') format('svg');
-	font-weight: normal;
-	font-style: normal;
+  font-family: "Montserrat";
+  src: url("./fonts/montserrat-regular/montserrat-regular.eot");
+  src: url("./fonts/montserrat-regular/montserrat-regular.woff") format("woff"),
+    url("./fonts/montserrat-regular/montserrat-regular.ttf") format("truetype"),
+    url("./fonts/montserrat-regular/montserrat-regular.svg") format("svg");
+  font-weight: normal;
+  font-style: normal;
 }
 @font-face {
-	font-family: 'Montserrat';
-	src: url('./fonts/montserrat-bold/montserrat-bold.eot');
-    src: url('./fonts/montserrat-bold/montserrat-bold.woff') format('woff'),
-       url('./fonts/montserrat-bold/montserrat-bold.ttf') format('truetype'),
-       url('./fonts/montserrat-bold/montserrat-bold.svg') format('svg');
-	font-weight: bold;
-	font-style: normal;
+  font-family: "Montserrat";
+  src: url("./fonts/montserrat-bold/montserrat-bold.eot");
+  src: url("./fonts/montserrat-bold/montserrat-bold.woff") format("woff"),
+    url("./fonts/montserrat-bold/montserrat-bold.ttf") format("truetype"),
+    url("./fonts/montserrat-bold/montserrat-bold.svg") format("svg");
+  font-weight: bold;
+  font-style: normal;
 }
 @font-face {
-	font-family: 'quicksand';
-	src: url('./fonts/quicksand-regular/quicksand-regular.eot');
-    src: url('./fonts/quicksand-regular/quicksand-regular.woff') format('woff'),
-		url('./fonts/quicksand-regular/quicksand-regular.ttf') format('truetype'),
-		url('./fonts/quicksand-regular/quicksand-regular.svg') format('svg');
-	font-weight: normal;
-	font-style: normal;
+  font-family: "quicksand";
+  src: url("./fonts/quicksand-regular/quicksand-regular.eot");
+  src: url("./fonts/quicksand-regular/quicksand-regular.woff") format("woff"),
+    url("./fonts/quicksand-regular/quicksand-regular.ttf") format("truetype"),
+    url("./fonts/quicksand-regular/quicksand-regular.svg") format("svg");
+  font-weight: normal;
+  font-style: normal;
 }
 @font-face {
-	font-family: 'quicksand';
-	src: url('./fonts/quicksand-bold/quicksand-bold.eot');
-    src: url('./fonts/quicksand-bold/quicksand-bold.woff') format('woff'),
-       url('./fonts/quicksand-bold/quicksand-bold.ttf') format('truetype'),
-       url('./fonts/quicksand-bold/quicksand-bold.svg') format('svg');
-	font-weight: bold;
-	font-style: normal;
+  font-family: "quicksand";
+  src: url("./fonts/quicksand-bold/quicksand-bold.eot");
+  src: url("./fonts/quicksand-bold/quicksand-bold.woff") format("woff"),
+    url("./fonts/quicksand-bold/quicksand-bold.ttf") format("truetype"),
+    url("./fonts/quicksand-bold/quicksand-bold.svg") format("svg");
+  font-weight: bold;
+  font-style: normal;
 }
