--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,3 @@
-
 /* Указываем box sizing */
 *,
 *::before,
@@ -30,9 +29,9 @@ dd {
   margin: 0;
   list-style-type: none;
 }
-a { 
+a {
   text-decoration: none; /* Отменяем подчеркивание у ссылки */
- } 
+}
 
 /* Выставляем основные настройки по-умолчанию для body */
 body {
@@ -40,7 +39,7 @@ body {
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   font-size: 14px;
 }
 
@@ -49,7 +48,7 @@ ul[class],
 ol[class] {
   list-style: none;
 }
-ul{
+ul {
   margin: 0px;
   padding: 0px;
 }
@@ -79,8 +78,9 @@ select {
   font: inherit;
 }
 
-input,button {
-  outline:none;
+input,
+button {
+  outline: none;
   background-color: #fff;
   padding: 0px;
   margin: 0px;
